test-output-24.txt

[Global Setup] Resetting and seeding backend database...

  Dropping all tables ................................................................................... 82.11ms DONE

   INFO  Preparing database.  

  Creating migration table ............................................................................... 8.02ms DONE

   INFO  Running migrations.  

  0001_01_01_000001_create_cache_table .................................................................. 10.52ms DONE
  0001_01_01_000002_create_jobs_table ................................................................... 40.39ms DONE
  2024_12_29_150440_create_access ........................................................................ 4.42ms DONE
  2024_12_29_150440_create_employees .................................................................... 54.08ms DONE
  2024_12_29_150441_create_detail_access ................................................................ 58.11ms DONE
  2024_12_29_150447_create_customers ..................................................................... 3.58ms DONE
  2024_12_29_150453_create_quotations ................................................................... 62.53ms DONE
  2024_12_29_150456_create_spareparts ................................................................... 22.56ms DONE
  2024_12_29_150459_create_detail_quotations ............................................................ 24.18ms DONE
  2024_12_29_150510_create_purchase_orders .............................................................. 57.71ms DONE
  2024_12_29_150515_create_proforma_invoices ............................................................ 89.45ms DONE
  2024_12_29_150524_create_invoices ..................................................................... 71.27ms DONE
  2024_12_29_150525_create_delivery_order ............................................................... 48.27ms DONE
  2024_12_29_150525_create_work_orders .................................................................. 35.87ms DONE
  2024_12_29_150528_create_work_orders_units ............................................................ 30.06ms DONE
  2024_12_29_150530_create_back_orders .................................................................. 34.05ms DONE
  2024_12_29_150531_create_detail_back_orders ........................................................... 61.95ms DONE
  2024_12_29_150535_create_buys ......................................................................... 35.16ms DONE
  2024_12_29_150538_create_sellers ...................................................................... 24.38ms DONE
  2024_12_29_150539_create_detail_buys .................................................................. 66.63ms DONE
  2024_12_29_150539_create_detail_spareparts ............................................................ 61.40ms DONE
  2024_12_29_150540_create_general ....................................................................... 3.64ms DONE
  2025_03_03_095456_create_personal_access_tokens_table ................................................. 26.53ms DONE
  2025_07_13_174820_add_version_to_purchase_orders ....................................................... 4.65ms DONE
  2025_09_20_000001_add_temp_pass_expires_to_employees ................................................... 3.38ms DONE
  2025_10_19_162330_create_branches_table ............................................................... 19.35ms DONE
  2025_10_19_162334_create_branch_sparepart_table ....................................................... 63.99ms DONE
  2025_10_19_162338_add_branch_id_to_quotations_and_buys_table .......................................... 75.90ms DONE
  2025_10_19_162341_drop_total_unit_and_branch_from_spareparts_table .................................... 18.35ms DONE


   INFO  Seeding database.  

  Database\Seeders\GeneralSeeder ............................................................................. RUNNING  
  Database\Seeders\GeneralSeeder .......................................................................... 11 ms DONE  

  Database\Seeders\AccessRoleSeeder .......................................................................... RUNNING  
  Database\Seeders\AccessRoleSeeder ....................................................................... 51 ms DONE  

  Database\Seeders\SellerSeeder .............................................................................. RUNNING  
  Database\Seeders\SellerSeeder ............................................................................ 4 ms DONE  

  Database\Seeders\BranchSeeder .............................................................................. RUNNING  
  Database\Seeders\BranchSeeder ............................................................................ 2 ms DONE  

  Database\Seeders\EmployeeSeeder ............................................................................ RUNNING  
  Database\Seeders\EmployeeSeeder ...................................................................... 3,159 ms DONE  

  Database\Seeders\CustomerSeeder ............................................................................ RUNNING  
  Database\Seeders\CustomerSeeder ........................................................................ 199 ms DONE  

  Database\Seeders\SparepartSeeder ........................................................................... RUNNING  
  Database\Seeders\SparepartSeeder ....................................................................... 358 ms DONE  

  Database\Seeders\QuotationSeeder ........................................................................... RUNNING  
  Database\Seeders\QuotationSeeder ......................................................................... 0 ms DONE  

  Database\Seeders\PurchaseOrderSeeder ....................................................................... RUNNING  
  Database\Seeders\PurchaseOrderSeeder .................................................................... 10 ms DONE  

  Database\Seeders\BackOrderSeeder ........................................................................... RUNNING  
  Database\Seeders\BackOrderSeeder ......................................................................... 2 ms DONE  

  Database\Seeders\BuySeeder ................................................................................. RUNNING  
  Database\Seeders\BuySeeder ............................................................................... 4 ms DONE  

  Database\Seeders\ProformaInvoiceSeeder ..................................................................... RUNNING  
  Database\Seeders\ProformaInvoiceSeeder .................................................................. 34 ms DONE  

  Database\Seeders\WorkOrderSeeder ........................................................................... RUNNING  
  Database\Seeders\WorkOrderSeeder ......................................................................... 7 ms DONE  

  Database\Seeders\DeliveryOrderSeeder ....................................................................... RUNNING  
  Database\Seeders\DeliveryOrderSeeder ..................................................................... 4 ms DONE  

  Database\Seeders\InvoiceSeeder ............................................................................. RUNNING  
  Database\Seeders\InvoiceSeeder ........................................................................... 3 ms DONE  

[Global Setup] Database seeded successfully!

SyntaxError: E:\Kerja\Kerja\Bkawan\PT_BerkatMegahJaya\Code\FrontEnd\bmj-app-frontend\e2e\quotation.spec.js: Unexpected token (230:0)

[0m [90m 228 |[39m   })[33m;[39m
 [90m 229 |[39m })[33m;[39m
[31m[1m>[22m[39m[90m 230 |[39m
 [90m     |[39m [31m[1m^[22m[39m[0m

   at quotation.spec.js:230

  228 |   });
  229 | });
> 230 |

Error: No tests found.
Make sure that arguments are regular expressions matching test files.
You may need to escape symbols like "$" or "*" and quote the arguments.

[1A[2K